--- a/Visualize/index.html
+++ b/Visualize/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Visualize by TEMPLATED</title>
+		<title>Visualized Page of Seonnnn</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/reset.css">
@@ -21,15 +21,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>This is <strong>MyPage</strong>, I Love You So Much hahaha by <a href="http://templated.co">strangepage</a><br />
-						and... Wanna go play with me?</h1>
+						<span class="avatar"><img src="images/miffy2.png" style="width:200px; height:200px;" alt="" /></span>
+						<h1>This is <strong>My 2023 UDR Page</strong>, Plz keep your eyes on me! <br />
+						Have a GREAT day</h1>
 						<ul class="icons">
-							<li><a href="#" class="icon-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon-gplus"><span class="label">Email</span></a></li>
+							<li><a href="https://www.instagram.com/sun.minii" class="icon-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/seonnnn" class="icon-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:parksm1101@korea.ac.kr" class="icon-gplus"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
@@ -39,37 +38,33 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+									<a href="https://seonnnn.github.io/UDR_HW/Coding4Cuts" >
+										<img src="images/thumbs/01.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>Coding4Cuts</h3>
 									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+									<a href="/parallax/index.html">
+										<img src="images/thumbs/02.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>Parallax Scrolling</h3>
 									</a>
 								</div>
 								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+									<a href="https://seonnnn.github.io/UDR_HW/parallax/3D_Cube_Banner/">
+										<img src="images/thumbs/03.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>3D Cube Banner</h3>
 									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+									<a href="https://seonnnn.github.io/UDR_HW/parallax/LandingPage/">
+										<img src="images/thumbs/04.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>Typing Landing Page</h3>
 									</a>
 								</div>
 								<div>
 									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<img src="images/thumbs/05.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>Calculator</h3>
 									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+									<a href="https://seonnnn.github.io/UDR_HW/PuzzleGame/">
+										<img src="images/thumbs/06.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>Puzzle Game</h3>
 									</a>
 								</div>
 							</section>
@@ -82,12 +77,6 @@
 					</footer>
 
 			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
