--- a/Visualize/index.html
+++ b/Visualize/index.html
@@ -46,6 +46,10 @@
 										<img src="images/thumbs/02.jpg" style="width:330px; height:300px;" alt="" />
 										<h3>Parallax Scrolling</h3>
 									</a>
+									<a href="/parallax/index.html">
+										<img src="images/thumbs/07.jpg" style="width:330px; height:300px;" alt="" />
+										<h3>Wordle Game</h3>
+									</a>
 								</div>
 								<div>
 									<a href="https://seonnnn.github.io/UDR_HW/parallax/3D_Cube_Banner/">
@@ -58,7 +62,7 @@
 									</a>
 								</div>
 								<div>
-									<a href="images/fulls/06.jpg">
+									<a href="https://seonnnn.github.io/UDR_HW/Calculator/">
 										<img src="images/thumbs/05.jpg" style="width:330px; height:300px;" alt="" />
 										<h3>Calculator</h3>
 									</a>
