--- a/Visualize/index.html
+++ b/Visualize/index.html
@@ -42,7 +42,7 @@
 										<img src="images/thumbs/01.jpg" style="width:330px; height:300px;" alt="" />
 										<h3>Coding4Cuts</h3>
 									</a>
-									<a href="/parallax/index.html">
+									<a href="https://seonnnn.github.io/UDR_HW/parallax/">
 										<img src="images/thumbs/02.jpg" style="width:330px; height:300px;" alt="" />
 										<h3>Parallax Scrolling</h3>
 									</a>
